<resources>
    <string name="app_name">Phone Book</string>
    <string name="action_settings">Settings</string>
    <string name="detail_label_name">Name:</string>
    <string name="detail_label_nickname">Nickname:</string>
    <string name="detail_label_phone">Phone:</string>
    <string name="detail_label_email">Email:</string>
    <string name="detail_label_address">Address</string>
    <string name="detail_label_city">City:</string>
    <string name="detail_label_state">State:</string>
    <string name="detail_label_company">Company:</string>
    <string name="detail_label_website">Website:</string>
    <string name="detail_menu_edit">Edit</string>
    <string name="detail_menu_delete">Delete</string>
    <string name="modify_name_hint">Name (Required)</string>
    <string name="modify_nickname_hint">Nickname</string>
    <string name="modify_phone_hint">Phone</string>
    <string name="modify_email_hint">Email</string>
    <string name="modify_address_hint">Address</string>
    <string name="modify_city_hint">City</string>
    <string name="modify_state_hint">State</string>
    <string name="modify_company_hint">Company</string>
    <string name="modify_website_hint">Website</string>
    <string name="modify_zipcode_hint">Zipcode</string>
    <string name="detail_label_zipcode">Zipcode</string>
    <string name="invalid_query_uri">Invalid Query URI</string>
    <string name="insert_failure">Insert Failed!</string>
    <string name="invalid_insert_uri">Invalid Insert Uri</string>
    <string name="incorrect_update_uri">Invalid Update Uri</string>
    <string name="incorrect_delete_uri">Invalid Delete Uri</string>
    <string name="main_menu_about">About</string>
</resources>
