<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_save_black_24dp"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_modify_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_modify_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_nickname_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPhonetic" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_modify_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_phone_hint"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_modify_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_modify_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_address_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_modify_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_city_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_modify_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_state_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_modify_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_company_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_modify_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_website_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEditText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_modify_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_zipcode_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>